--- a/src/app/meal/meal.component.html
+++ b/src/app/meal/meal.component.html
@@ -1,1 +1,63 @@
-<p>meal works!</p>
+<div class="container admin">
+ 
+  <form class="row">
+    <div class="col-8">
+      <div class="form-row mb-4">
+        <div class="col-1">
+          <label for="">name</label>
+        </div>
+        <div class="col-3">
+          <input type="text" class="form-control" required>
+        </div>
+      </div>
+    
+      <div class="form-row mb-4">
+        <div class="col-1">
+          <label for="">price</label>
+        </div>
+        <div class="col-3">
+          <input type="text" class="form-control" required>
+        </div>
+        
+      </div>
+      
+      <div class="form-row mb-4">
+        <div class="col-1">
+          <label for="">discription</label>
+        </div>
+        <div class="col-6">
+          <div class="form-group">
+            <textarea class="form-control rounded-0" rows="3"></textarea>
+          </div>
+        
+        </div>
+        
+      </div>
+      <div class="form-row mb-4">
+        <div class="col-1">
+          <label for="">category</label>
+        </div>
+        <div class="col-3">
+          <select name="category"  class="form-control">
+            <option value="cat1">Cat1</option>
+            <option value="cat2">Cat2</option>
+            <option value="cat3">Cat3</option>
+          </select>
+        </div>
+        
+      </div>
+      <button class="btn btn-primary btn-center">Save</button>
+    </div>
+    <div class="col-4 text-center">
+      <div>
+        <img src="http://cdn.onlinewebfonts.com/svg/img_234957.png" alt="....">
+      </div>
+      <div class="form-group text-center">
+        <input type="file" class="form-control-file" id="exampleFormControlFile1">
+      </div>
+    </div>
+    
+  </form>
+
+  
+</div>
