--- a/src/app/order/order.component.html
+++ b/src/app/order/order.component.html
@@ -50,7 +50,7 @@
 
     <div class="row">
       <div class="col-sm">
-        <button class="btn btn-primary" (click)="addItem()">Add</button>
+        <button class="btn btn-primary float-right" (click)="addItem()">Add</button>
       </div>
     </div>
 
@@ -73,4 +73,4 @@
   </table>
   <h3 class = "TotalPrice"> Total: {{TotalPrice}} LE</h3>
 </div>
-<button class="btn btn-primary bottom"(click)="reset()">Add New Order</button>
+<button class="btn btn-primary bottom float-right"(click)="reset()">Add New Order</button>
